# physics-engine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.MD  common.cpp  common.hpp  error.hpp  main.cpp  object.hpp  terminal.cpp  terminal.hpp  vec.cpp  vec.hpp
engine/: body.hpp  collision.hpp  env.cpp  env.hpp  error.hpp  pointpart.cpp  pointpart.hpp
graphics/: circle.cpp  circle.hpp  graphics.cpp  graphics.hpp  plane.hpp  shape.hpp  shapes.hpp  sphere.hpp
